# bgm

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: aura.rc
docs/: windows-installer.md
packaging/windows/squirrel/: aura.nuspec
scripts/windows/: package-squirrel.ps1
shaders/: rust-toolchain.toml
shaders/dither_asci_1/: Cargo.toml
shaders/dither_asci_1/src/: lib.rs
shaders/dither_asci_2/: Cargo.toml
shaders/dither_asci_2/src/: lib.rs
shaders/gradient_glossy/: Cargo.toml
shaders/gradient_glossy/src/: lib.rs
shaders/limestone_cave/: Cargo.toml
shaders/limestone_cave/src/: lib.rs
shaders/live_bg_shader/: Cargo.toml
shaders/live_bg_shader/src/: lib.rs
shaders/shader_builder/: Cargo.toml
shaders/shader_builder/src/: main.rs
src/: cache.rs  config.rs  crash_capture.rs  crash_ui.rs  debug_capture.rs  image_pipeline.rs  logging.rs  main.rs  rotation.rs  scheduler.rs  state.rs  version.rs
src/installer/: mod.rs  windows_squirrel.rs
src/renderer/: compiler.rs  desktop_windows.rs  engine.rs  mod.rs  precompiled.rs  watcher.rs  wgpu_runtime.rs
src/settings_ui/: mod.rs  windows.rs
src/sources/: directory.rs  mod.rs  rss.rs  single.rs
src/tray/: mod.rs  windows.rs
src/updater/: mod.rs  windows.rs
src/wallpaper/: mod.rs  windows.rs
ui/: .gitignore  .oxlintrc.json  .prettierrc.json  AGENTS.md  README.md  bootstrap.ts  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
ui/config/: stylex.ts
ui/scripts/bootstrap/: core.ts  version-bump.ts  version.ts
ui/src/: App.tsx  index.tsx  routeTree.gen.ts  router.test.tsx  router.tsx  styles.css  vite-env.d.ts
ui/src/host/: types.ts
ui/src/lib/: device.ts  scheduler.ts  type-assertions.ts  type-guards.ts
ui/src/lib/global/: devTools.ts  env.ts  featureFlags.test.ts  featureFlags.ts  global.d.ts  index.ts  log.test.ts  log.ts  utils.test.ts  utils.ts  version.ts
ui/src/lib/hooks/: index.ts  state.ts  useCopyToClipboard.ts  useEventListener.ts  useIntersection.ts  useInterval.ts
ui/src/lib/host/: client.ts  types.ts
ui/src/lib/strings/: errors.ts  helpers.test.ts  helpers.ts  time.test.ts  time.ts
ui/src/lib/styles/: colors.stylex.ts  index.test.tsx  keyframes.stylex.ts  mixins.stylex.ts  shadows.stylex.ts  stylex.css  (+1 more)
ui/src/state/: actions.ts  mutate.bench.ts  mutate.test.ts  mutate.ts  persist.test.ts  persist.ts  store.test.ts  store.ts
ui/src/tests/: index.ts  macros.tsx  render.test.tsx  render.tsx  setupTests.ts  utils.tsx
ui/src/types/: vite-env.d.ts
(+58 files in other folders)
